...
    <string name="auth_error_signup_email_collision">"Coudn't sign up: an account already exists with that email"</string>
    <string name="auth_error_signup_generic">"Couldn't sign up. Please check your internet access or try again later"</string>

    <string name="follow_button">Follow</string>
    <string name="follow_request_sent">Follow request sent.</string>
    <string name="search_bar_text">Find a person</string>
    <string name="send_follow_request_menu_send">Send request</string>
    <string name="send_follow_request_menu_cancel">Cancel</string>
    <string name="send_follow_request_menu_message">If this participant accepts your follow request, you will be able to see their most recent mood event in your feed.</string>
    <string name="title_activity_maps">Map</string>
</resources>

